# VRChat-ToolBox

./: OSC-Chatbox.py  OSC-FaceTrackingController.py  OSC-FaceTrackingDebuger.py  OSC-Linux-Backup.py  OSC-PC.py  OSC-ToolBox.py  OSC-VRC-ToolBox.py  OSC-Windows.py  README.md  VRChat-ToolBox.py  roadmap.md
OSC-Tools/: OSC-Chatbox.py  OSC-FaceTrackingController(Beta).py  OSC-Router.py
OSC-Tools/OSC-Chatbox/: OSC-Chatbox.py
OSC-Tools/OSC-Router/: OSC-Router.py
OSC/Depreciated/: OSC 0.03-PageIndexing-Unstable-Depreciated.py  OSC 0.04-HardwareStats-Unstable-Depreciated.py  OSC 0.06-VrcFPS-Unstable-Depreciated.py  OSC 0.10-RamInfo-Depreciated.py  OSC 0.11-Commented-Depreciated.py  OSC 0.12-VramInfo-Depreciated.py  OSC 0.13-VramInfo-Depreciated.py  OSC 0.14-Unstable-Depreciated.py  OSC 0.15-Unstable-Depreciated.py  OSC 0.17-Unstable-Depreciated.py  OSC 0.18-Unstable-Depreciated.py  OSC 0.19-Unstable-Depreciated.py  OSC 0.21-ErrorCorrected-Depreciated.py  OSC 0.22-ErrorCorrcted-Depreciated.py  OSC 0.24-ExcessRemoved-Depreciated.py  OSC 0.28-ErrorCorrected-Depreciated.py  OSC 0.30-Stable-Depreciated.py  OSC 0.34-UI-TextControl-Depreciated.py  OSC 0.35-ErrorsCorrected-Depreciated.py  OSC 0.36-Stable-Depreciated.py  OSC 0.42-ExtraHardwareStats-Beta.py  OSC 0.43-Timeings-Beta.py  OSC 0.44-CpuDataReader-Beta.py  OSC 0.45-CpuDataReader-Beta.py  OSC 0.48-Clean-Beta.py
OSC/Depreciated/Network/: network_to_chatbox.py  network_to_chatbox3.py
OSC/OSC/: OSC 0.50-Stable.py  OSC 0.51-Beta.py
OSC/OSC-Android/: OSC 0.01-Stripped.py
OSC/OSC-Android-Beta/: OSC-Andoid-Beta.py
OSC/OSC-Linux/: OSC-Linux-Beta.py
OSC/OSC-Linux-Beta/: OSC-Linux-Stable.py
OSC/OSC-Windows/: OSC 0.38-Stable.py  OSC 0.39-ExtraHardwareStats-Beta.py  OSC 0.40-ExtraHardwareStats-Beta.py  OSC 0.46-WebSentStats-Beta.py  OSC 0.47-WebSentStats-Beta.py  OSC 0.49-ErrorsCorrected-Beta.py  OSC-Windows-Beta.py  OSC-Windows-Stable.py
OSC/OSC-Windows/Depreciated/: OSC 0.00-NetworkChatbox.py  OSC 0.01-PortChange-Depreciated.py  OSC 0.02-MediaInfo-Unstable-Depreciated.py  OSC 0.05-SteamVrFPS-Depreciated.py  OSC 0.16-Unstable-Depreciated.py  OSC 0.25-ErrorCorrected-Depreciated.py  OSC 0.27-TitleFilter-Depreciated.py  OSC 0.29-Commented-Depreciated.py  OSC 0.31-GpuCpuDetector-Depreciated.py  OSC 0.32-Stable-Depreciated.py  OSC 0.33-UI-Depreciated.py  OSC 0.37-Commented-Depreciated.py
Toolbox exe/: CMakeLists.txt  main.cpp  make_icon.ps1  refresh_icon_cache.ps1  untitled.rc
VRChat-Tools/OSC-Chatbox/: OSC-Chatbox.py  config.py  gpu_ids.py  main.py  osc_loop.py  state.py
VRChat-Tools/OSC-Chatbox-Depeciated/: OSC-Chatbox.py
VRChat-Tools/OSC-Chatbox/hardware/: cpu.py  (+3 more)
VRChat-Tools/OSC-FaceTrackingController/: OSC-FaceTrackingController(Beta).py  OSC-FaceTrackingController.py
VRChat-Tools/OSC-Gamepad/: OSC-Gamepad.py  config.py  main.py
VRChat-Tools/OSC-ParameterBrowser/: OSC-ParameterBrowser.py
VRChat-Tools/OSC-Router/: OSC-Router.py  config.py  main.py
VRChat-Tools/VRChat-Launcher/: VRChat-Launcher.py
VRChat-Tools/VRChat-LocalFavorites/: VRChat-LocalFavorites.py
compiler/: VRChat-ToolBox.py  build_exe.py
(+31 files in other folders)
